KTS-92 Refactor pagination usage